--- a/locales/de/LC_MESSAGES/UCMResearchApp.po
+++ b/locales/de/LC_MESSAGES/UCMResearchApp.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2019-06-16 22:32+0200\n"
-"PO-Revision-Date: 2019-06-17 03:08+0200\n"
+"POT-Creation-Date: 2019-06-20 00:10+0200\n"
+"PO-Revision-Date: 2019-06-20 00:12+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -15,92 +15,138 @@ msgstr ""
 "X-Poedit-SearchPath-0: main.py\n"
 "X-Poedit-SearchPath-1: uncontrolledmanifold.kv\n"
 
-#: main.py:45
-msgid "Welcome!"
-msgstr "[color=ff00ff][b]Hallo![/b][/color]"
-
-#: main.py:58
-msgid "[color=ff00ff][b]Thank you[/b][/color] for participating!"
-msgstr "[color=ff00ff][b]Vielen Dank[/b][/color] für Ihre Teilnahme!"
-
-#: main.py:62
-msgid "Files were {}saved to {}."
-msgstr "Daten wurden {}gespeichert in [i]{}[/i]."
-
-#: main.py:62
-msgid "[b]not[/b]"
-msgstr "[b]nicht[/b]"
-
-#: main.py:73 main.py:74
+#: main.py:50 main.py:67 main.py:79 main.py:83 main.py:84
 msgid "Initiating..."
 msgstr "Initiierung..."
 
-#: main.py:81
+#: main.py:54
+msgid "Welcome!"
+msgstr "[color=ff00ff][b]Hallo![/b][/color]"
+
+#: main.py:71
+msgid "[color=ff00ff][b]Thank you[/b][/color] for participating!"
+msgstr "[color=ff00ff][b]Vielen Dank[/b][/color] für Ihre Teilnahme!"
+
+#: main.py:72
+msgid "Files were {}saved to [i]{}[/i]."
+msgstr "Daten wurden {}gespeichert in [i]{}[/i]."
+
+#: main.py:72
+msgid "[b]not[/b]"
+msgstr "[b]nicht[/b]"
+
+#: main.py:91
 msgid "There are a total of {} trials in this block."
 msgstr "In diesem Block absolvieren Sie insgesamt {} Durchgänge."
 
-#: main.py:84
+#: main.py:94
 msgid "s"
 msgstr "n"
 
-#: main.py:85
+#: main.py:95
 msgid "You have {} task{} in this block."
 msgstr "Sie haben {} Aufgabe{} in diesem Block."
 
-#: main.py:86
+#: main.py:96
 msgid ""
-"A trial ends when the outer [color=ff00ff]purple ring[/color] reaches 100% (circle closes) and the countdown reaches 0.\n"
+"A trial ends when the outer [color=ff00ff]purple ring[/color] reaches 100% "
+"(circle closes) and the countdown reaches 0.\n"
 "Shortly thereafter you will be prompted to get ready for the next trial."
 msgstr ""
-"Ein Durchgang endet, wenn der äußere [color=ff00ff]lila Ring[/color] 100% erreicht (Kreis schließt) und der Countdown 0 erreicht.\n"
-"Kurz darauf werden Sie aufgefordert, sich für den nächsten Durchgang bereit zu halten."
+"Ein Durchgang endet, wenn der äußere [color=ff00ff]lila Ring[/color] 100% "
+"erreicht (Kreis schließt) und der Countdown 0 erreicht.\n"
+"Kurz darauf werden Sie aufgefordert, sich für den nächsten Durchgang bereit "
+"zu halten."
 
-#: main.py:89
-msgid "Use the [b]2 sliders[/b] to match the size of the [b]white disk[/b] to the [color=008000]green ring[/color]."
-msgstr "Verwenden Sie die [b]2 Schieberegler[/b], um die [b]weiße Scheibe[/b] auf die Größe des [color=008000]grünen Rings[/color] anzupassen."
+#: main.py:99
+msgid ""
+"Use the [b]2 sliders[/b] to match the size of the [b]white disk[/b] to the "
+"[color=008000]green ring[/color]."
+msgstr ""
+"Verwenden Sie die [b]2 Schieberegler[/b], um die [b]weiße Scheibe[/b] auf "
+"die Größe des [color=008000]grünen Rings[/color] anzupassen."
 
-#: main.py:91
-msgid "Concurrently bring the [color=3f84f2]blue arch[/color] to the [color=3f84f2]blue disc[/color] by using one of the sliders. It will be the same slider during the block."
-msgstr "Bewegen Sie gleichzeitig den [color=3f84f2]blauen Bogen[/color] mit einem der Schieberegler auf zum [color=3f84f2]blauen Punkt[/color]. Es wird immer der gleiche Schieberegler während des Blocks sein, der den Bogen spannt."
+#: main.py:101
+msgid ""
+"Concurrently bring the [color=3f84f2]blue arch[/color] to the "
+"[color=3f84f2]blue disc[/color] by using one of the sliders. It will be the "
+"same slider during the block."
+msgstr ""
+"Bewegen Sie gleichzeitig den [color=3f84f2]blauen Bogen[/color] mit einem "
+"der Schieberegler auf zum [color=3f84f2]blauen Punkt[/color]. Es wird immer "
+"der gleiche Schieberegler während des Blocks sein, der den Bogen spannt."
 
-#: main.py:107 main.py:170 main.py:177
+#: main.py:117 main.py:175
 msgid "Trial: "
 msgstr "Durchgang: "
 
-#: main.py:136
+#: main.py:145
 msgid "PREPARE"
 msgstr "Achtung"
 
-#: main.py:179
+#: main.py:193
 msgid "GET READY"
 msgstr ""
 "Bereit\n"
 "machen"
 
-#: main.py:202
+#: main.py:216
 msgid "FINISHED"
 msgstr "FERTIG"
 
-#: main.py:306
+#: main.py:346
 msgid "Press again to quit."
 msgstr "Nochmals tippen zum Beenden."
 
-#: uncontrolledmanifold.kv:27
+#: main.py:468
+msgid "Language"
+msgstr "Sprache"
+
+#: main.py:469
+msgid "Display language for user instructions."
+msgstr "Anzeigesprache für Instruktionen zur Durchführung."
+
+#: main.py:559
+msgid ""
+"Disclaimer:\n"
+"By submitting this e-mail you agree to the data processing and evaluation "
+"for the purpose of this scientific investigation.\n"
+"The data below will be copied and saved from the received e-mail. The email "
+"itself will be deleted within 3 days to separate the sender address from the "
+"data for the purpose of anonymisation.\n"
+" If you wish to revoke your consent to data processing and storage, please "
+"send an e-mail to the address specified in the address line and provide your "
+"identification code [b]{}[/b] so that I can assign and delete your record.\n"
+"If you deleted this email from your [i]Sent[/i] folder, you can look up your "
+"unique ID in the App Settings window. It is based on your hardware but does "
+"not contain any identifiable information about it or about yourself."
+msgstr ""
+"Erklärung:\n"
+"Mit Absenden dieser E-Mail stimmen Sie der Datenverarbeitung und Auswertung "
+"zum Zweck dieser wissenschaftlichen Untersuchung zu.\n"
+"Die unten stehenden Daten werden aus der empfangenen E-Mail kopiert und "
+"gespeichert. Die E-Mail selbst wird innerhalb von 3 Tagen gelöscht, um die "
+"Absenderadresse von den Daten zum Zweck der Anonymisierung zu trennen.\n"
+"Sollten Sie ihre Einwilligung zur Datenverarbeitung und Speicherung "
+"widerrufen wollen, senden Sie bitte eine E-Mail and die in der Adresszeile "
+"angegebene Adresse und geben Ihren Identifikationscode [b]{}[/b] an, damit "
+"ich Ihren Datensatz zuordnen und Löschen kann.\n"
+"Wenn Sie diese E-Mail aus Ihrem Ordner [i]Gesendet[/i] gelöscht haben, "
+"können Sie Ihre eindeutige ID im Einstellungsfenster der App nachsehen. Sie "
+"basiert auf Ihrer verwendeten Hardware, enthält aber keine identifizierbaren "
+"Informationen über diese oder über Ihre Person selbst."
+
 msgid "Settings"
 msgstr "Einstellungen"
 
-#: uncontrolledmanifold.kv:33
 msgid "Proceed"
 msgstr "Weiter"
 
-#: uncontrolledmanifold.kv:56
 msgid "Start"
 msgstr "Start"
 
-#: uncontrolledmanifold.kv:194
 msgid "Home"
 msgstr "Zurück"
 
-#: uncontrolledmanifold.kv:199
 msgid "Quit"
 msgstr "Beenden"
