--- a/locales/en/LC_MESSAGES/UCMResearchApp.po
+++ b/locales/en/LC_MESSAGES/UCMResearchApp.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: UCMResearchApp\n"
-"POT-Creation-Date: 2019-06-16 22:30+0200\n"
-"PO-Revision-Date: 2019-06-17 03:08+0200\n"
+"POT-Creation-Date: 2019-06-20 00:10+0200\n"
+"PO-Revision-Date: 2019-06-20 00:12+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -15,39 +15,39 @@ msgstr ""
 "X-Poedit-SearchPath-0: main.py\n"
 "X-Poedit-SearchPath-1: uncontrolledmanifold.kv\n"
 
-#: main.py:45
-msgid "Welcome!"
-msgstr "[color=ff00ff][b]Hello, hello![/b][/color]"
-
-#: main.py:58
-msgid "[color=ff00ff][b]Thank you[/b][/color] for participating!"
-msgstr "[color=ff00ff][b]Thank you[/b][/color] for participating!"
-
-#: main.py:62
-msgid "Files were {}saved to {}."
-msgstr "Files were {}saved to {}."
-
-#: main.py:62
-msgid "[b]not[/b]"
-msgstr "[b]not[/b]"
-
-#: main.py:73 main.py:74
+#: main.py:50 main.py:67 main.py:79 main.py:83 main.py:84
 msgid "Initiating..."
 msgstr "Initiating..."
 
-#: main.py:81
+#: main.py:54
+msgid "Welcome!"
+msgstr "[color=ff00ff][b]Hello, hello![/b][/color]"
+
+#: main.py:71
+msgid "[color=ff00ff][b]Thank you[/b][/color] for participating!"
+msgstr "[color=ff00ff][b]Thank you[/b][/color] for participating!"
+
+#: main.py:72
+msgid "Files were {}saved to [i]{}[/i]."
+msgstr "Files were {}saved to[i]{}[/i]."
+
+#: main.py:72
+msgid "[b]not[/b]"
+msgstr "[b]not[/b]"
+
+#: main.py:91
 msgid "There are a total of {} trials in this block."
 msgstr "There are a total of {} trials in this block."
 
-#: main.py:84
+#: main.py:94
 msgid "s"
 msgstr "s"
 
-#: main.py:85
+#: main.py:95
 msgid "You have {} task{} in this block."
 msgstr "You have {} task{} in this block."
 
-#: main.py:86
+#: main.py:96
 msgid ""
 "A trial ends when the outer [color=ff00ff]purple ring[/color] reaches 100% "
 "(circle closes) and the countdown reaches 0.\n"
@@ -57,7 +57,7 @@ msgstr ""
 "(circle closes) and the countdown reaches 0.\n"
 "Shortly thereafter you will be prompted to get ready for the next trial."
 
-#: main.py:89
+#: main.py:99
 msgid ""
 "Use the [b]2 sliders[/b] to match the size of the [b]white disk[/b] to the "
 "[color=008000]green ring[/color]."
@@ -65,7 +65,7 @@ msgstr ""
 "Use the [b]2 sliders[/b] to match the size of the [b]white disk[/b] to the "
 "[color=008000]green ring[/color]."
 
-#: main.py:91
+#: main.py:101
 msgid ""
 "Concurrently bring the [color=3f84f2]blue arch[/color] to the "
 "[color=3f84f2]blue disc[/color] by using one of the sliders. It will be the "
@@ -75,42 +75,73 @@ msgstr ""
 "[color=3f84f2]blue disc[/color] by using one of the sliders. It will be the "
 "same slider during the block."
 
-#: main.py:107 main.py:170 main.py:177
+#: main.py:117 main.py:175
 msgid "Trial: "
 msgstr "Trial: "
 
-#: main.py:136
+#: main.py:145
 msgid "PREPARE"
 msgstr "PREPARE"
 
-#: main.py:179
+#: main.py:193
 msgid "GET READY"
 msgstr "GET READY"
 
-#: main.py:202
+#: main.py:216
 msgid "FINISHED"
 msgstr "FINISHED"
 
-#: main.py:306
+#: main.py:346
 msgid "Press again to quit."
 msgstr "Press again to quit."
 
-#: uncontrolledmanifold.kv:27
+#: main.py:468
+msgid "Language"
+msgstr "Language"
+
+#: main.py:469
+msgid "Display language for user instructions."
+msgstr "Display language for user instructions."
+
+#: main.py:559
+msgid ""
+"Disclaimer:\n"
+"By submitting this e-mail you agree to the data processing and evaluation "
+"for the purpose of this scientific investigation.\n"
+"The data below will be copied and saved from the received e-mail. The email "
+"itself will be deleted within 3 days to separate the sender address from the "
+"data for the purpose of anonymisation.\n"
+" If you wish to revoke your consent to data processing and storage, please "
+"send an e-mail to the address specified in the address line and provide your "
+"identification code [b]{}[/b] so that I can assign and delete your record.\n"
+"If you deleted this email from your [i]Sent[/i] folder, you can look up your "
+"unique ID in the App Settings window. It is based on your hardware but does "
+"not contain any identifiable information about it or about yourself."
+msgstr ""
+"Disclaimer:\n"
+"By submitting this e-mail you agree to the data processing and evaluation "
+"for the purpose of this scientific investigation.\n"
+"The data below will be copied and saved from the received e-mail. The email "
+"itself will be deleted within 3 days to separate the sender address from the "
+"data for the purpose of anonymisation.\n"
+" If you wish to revoke your consent to data processing and storage, please "
+"send an e-mail to the address specified in the address line and provide your "
+"identification code [b]{}[/b] so that I can assign and delete your record.\n"
+"If you deleted this email from your [i]Sent[/i] folder, you can look up your "
+"unique ID in the App Settings window. It is based on your hardware but does "
+"not contain any identifiable information about it or about yourself."
+
 msgid "Settings"
 msgstr "Settings"
 
-#: uncontrolledmanifold.kv:33
 msgid "Proceed"
 msgstr "Proceed"
 
-#: uncontrolledmanifold.kv:56
 msgid "Start"
 msgstr "Start"
 
-#: uncontrolledmanifold.kv:194
 msgid "Home"
 msgstr "Home"
 
-#: uncontrolledmanifold.kv:199
 msgid "Quit"
 msgstr "Quit"
