update terms (external links)

--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2020-05-21 14:18+0200\n"
-"PO-Revision-Date: 2020-05-21 14:20+0200\n"
+"POT-Creation-Date: 2020-05-22 18:30+0200\n"
+"PO-Revision-Date: 2020-05-22 18:39+0200\n"
 "Last-Translator: Olaf Haag <contanct@olafhaag.com>\n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -930,6 +930,8 @@ msgid ""
 "\n"
 "You are granted a nonexclusive, worldwide, and perpetual license to perform, "
 "display, and use the Product on the Device.  \n"
+"{author} built the {appname} app as an Open Source app. This SERVICE is "
+"provided by {author} at no cost and is intended for use as is.\n"
 "You're not allowed to attempt to extract the source code of the app from its "
 "binary distribution and installation. The source code is provided separately "
 "under the open MIT license. The app itself, and all the trade marks, "
@@ -994,6 +996,13 @@ msgid ""
 "licenses granted to you in these terms will end; (b) you must stop using the "
 "app, and (if needed) delete it from your device.\n"
 "\n"
+"## Links to Other SitesThis Service may contain links to other sites. If you "
+"click on a third-party link, you will be directed to that site. Note that "
+"these external sites may not be operated by me. Therefore, I strongly advise "
+"you to review the Privacy Policy of these websites. I have no control over "
+"and assume no responsibility for the content, privacy policies, or practices "
+"of any third-party sites or services.\n"
+"\n"
 "## Changes to This Terms and Conditions\n"
 "We may update the Terms and Conditions from time to time. \n"
 "\n"
@@ -1021,6 +1030,9 @@ msgstr ""
 "\n"
 "Sie erhalten eine nicht exklusive, weltweite und unbefristete Lizenz zum "
 "Ausführen, Anzeigen und Verwenden des Produkts auf dem Gerät.  \n"
+"{author} hat die {appname} App als Open Source-App erstellt. Dieser SERVICE "
+"wird von {author} kostenlos zur Verfügung gestellt und ist für den Gebrauch "
+"im Ist-Zustand bestimmt.\n"
 "Es ist Ihnen untersagt, den Quellcode der Anwendung aus ihrer binären "
 "Distribution bzw. Installation zu extrahieren. Der Quellcode wird separat "
 "unter der offenen MIT-Lizenz bereitgestellt. Die Anwendung selbst und alle "
@@ -1097,6 +1109,14 @@ msgstr ""
 "Anwendung einstellen und diese (falls erforderlich) von Ihrem Gerät "
 "löschen.\n"
 "\n"
+"## Links zu anderen Seiten\n"
+"Dieser Service kann Links zu anderen Websites enthalten. Wenn Sie auf einen "
+"Link eines Drittanbieters klicken, werden Sie zu dieser Site weitergeleitet. "
+"Beachten Sie, dass diese externen Websites möglicherweise nicht von mir "
+"betrieben werden. Aus diesem Grund empfehle ich Ihnen dringend, die "
+"Datenschutzbestimmungen dieser Webseiten zu lesen. Ich habe keine Kontrolle "
+"über Inhalte, Datenschutzrichtlinien oder Praktiken von Webseiten oder "
+"Diensten Dritter und übernehme keine Verantwortung dafür.\n"
 "## Änderungen dieser Allgemeinen Nutzungsbedingungen\n"
 "Wir können die Allgemeinen Nutzungsbedingungen von Zeit zu Zeit "
 "aktualisieren.\n"
