terms formatting fix

--- a/locales/en/LC_MESSAGES/translations.po
+++ b/locales/en/LC_MESSAGES/translations.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
-"POT-Creation-Date: 2020-05-22 18:39+0200\n"
-"PO-Revision-Date: 2020-05-22 18:39+0200\n"
+"POT-Creation-Date: 2020-05-22 18:42+0200\n"
+"PO-Revision-Date: 2020-05-22 18:42+0200\n"
 "Last-Translator: Olaf Haag <contanct@olafhaag.com>\n"
 "Language-Team: \n"
 "Language: en\n"
@@ -778,12 +778,13 @@ msgid ""
 "licenses granted to you in these terms will end; (b) you must stop using the "
 "app, and (if needed) delete it from your device.\n"
 "\n"
-"## Links to Other SitesThis Service may contain links to other sites. If you "
-"click on a third-party link, you will be directed to that site. Note that "
-"these external sites may not be operated by me. Therefore, I strongly advise "
-"you to review the Privacy Policy of these websites. I have no control over "
-"and assume no responsibility for the content, privacy policies, or practices "
-"of any third-party sites or services.\n"
+"## Links to Other Sites\n"
+"This Service may contain links to other sites. If you click on a third-party "
+"link, you will be directed to that site. Note that these external sites may "
+"not be operated by me. Therefore, I strongly advise you to review the "
+"Privacy Policy of these websites. I have no control over and assume no "
+"responsibility for the content, privacy policies, or practices of any third-"
+"party sites or services.\n"
 "\n"
 "## Changes to This Terms and Conditions\n"
 "We may update the Terms and Conditions from time to time. \n"
