--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
 "POT-Creation-Date: 2020-05-23 14:49+0200\n"
-"PO-Revision-Date: 2020-05-23 14:56+0200\n"
+"PO-Revision-Date: 2020-05-24 21:33+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: de_DE\n"
@@ -916,8 +916,8 @@ msgid ""
 "you.\n"
 msgstr ""
 "Sie können nun die Forschungsdaten [b]hochladen[/b], indem Sie die "
-"Schaltfläche unten drücken. Sofern in der Beschreibung der Studie nichts "
-"anderes angegeben, wären wir Ihnen dankbar, wenn Sie Ihre Daten nur nach "
+"Schaltfläche unten drücken. Sofern in der Beschreibung der Studie nicht "
+"anders angegeben, wären wir Ihnen dankbar, wenn Sie Ihre Daten nur nach "
 "Ihrer ersten Teilnahme an dieser Studie hochladen. Vielen Dank.\n"
 
 #: src/widgets/screensgeneral.py:68
