--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -591,7 +591,10 @@ msgstr "Warnung"
 msgid "Error"
 msgstr "Fehler"
 
-#: src/widgets/managers.py:285
+#: src/widgets/managers.py:260
+msgid "Do you want to quit?"
+msgstr "Möchten Sie die App beenden?"
+
 msgid "Success!"
 msgstr "Erfolg!"
 
@@ -611,10 +614,6 @@ msgstr ""
 msgid "Please make sure the app is up-to-date."
 msgstr ""
 "Bitte stellen Sie sicher, dass die Software auf dem neuesten Stand ist."
-
-#: src/widgets/managers.py:328
-msgid "Press again to quit."
-msgstr "Nochmals tippen zum Beenden."
 
 #: src/widgets/popups.py:33 src/widgets/popups.py:86 src/widgets/popups.py:114
 #: src/widgets/popups.py:177 src/widgets/popups.py:340
